--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,11 @@
 name = "google_certs_oauth"
 version = "0.1.0"
 edition = "2021"
+authors = ["Kwabena Amponsem"]
+description = "This is a simple library that helps you decode Google OAuth 2.0 JWT tokens and verify them using Google's public keys."
+license = "MIT"
+repository = "https://github.com/kbamponsem/google-rust-oauth-lib.git"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
