--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ repository = "https://github.com/kbamponsem/google-rust-oauth-lib.git"
 
 [dependencies]
 jsonwebtoken = "8.3.0"
-reqwest = {version="0.11.20", features = ["blocking", "json"]}
+reqwest = { version = "0.11.20", features = ["json"] }
 serde = "1.0.188"
 serde_json = "1.0.107"
